--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 name: Build and test
 'on':
-  pull_request
   push:
+    branches:
+      - master
+  pull_request:
     branches:
       - master
 jobs:
