--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
 	},
 	"devDependencies": {
 		"@types/assert": "^1.5.5",
-		"@types/mocha": "^8.2.2",
+		"@types/mocha": "^8.2.3",
 		"@types/node": "^16.3.3",
 		"@types/yargs": "^17.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.13.0",
@@ -63,12 +63,12 @@
 		"eslint-config-pro": "^2.1.1",
 		"eslint-plugin-sonarjs": "^0.9.1",
 		"mocha": "^9.0.2",
-		"ts-node": "^10.0.0",
+		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
-		"yargs": "^16.1.0",
+		"kleur": "^4.1.1",
 		"ps-tree": "^1.2.0",
-		"kleur": "^4.1.1"
+		"yargs": "^17.0.1"
 	}
 }
