--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "outDir": "./dist",
         "module": "CommonJS",
         "target": "ES2019",
+        "declaration": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "moduleResolution": "node",
