--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@flemist/run-script",
-	"version": "2.0.2",
+	"version": "2.1.1",
 	"description": "Use JavaScript instead npm scripts",
 	"author": {
 		"name": "Nikolay Makhonin",
@@ -50,7 +50,7 @@
 	"scripts": {
 		"prepublishOnly": "npm run ci",
 		"lint": "eslint \"./src/**/*.ts\"",
-		"build": "tsc",
+		"build": "shx rm -rf dist && tsc",
 		"test": "mocha ./dist/**/*.test.js",
 		"test:watch": "mocha --require ts-node/register ./src/**/*.test.ts --watch",
 		"ci": "npm i && npm run lint && npm run build && npm run test"
@@ -67,12 +67,13 @@
 		"eslint-config-pro": "^2.1.1",
 		"eslint-plugin-sonarjs": "^0.9.1",
 		"mocha": "^9.0.2",
+		"shx": "^0.3.3",
 		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
+		"@flemist/kill-process": "0.0.7",
 		"kleur": "^4.1.1",
-		"ps-tree": "^1.2.0",
 		"yargs": "^17.0.1"
 	}
 }
