--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@flemist/run-script",
-	"version": "2.1.2",
+	"version": "2.1.3",
 	"description": "Use JavaScript instead npm scripts",
 	"author": {
 		"name": "Nikolay Makhonin",
@@ -72,7 +72,7 @@
 		"typescript": "^4.3.5"
 	},
 	"dependencies": {
-		"@flemist/kill-process": "0.0.7",
+		"@flemist/simple-tree-kill": "0.0.2",
 		"kleur": "^4.1.1",
 		"yargs": "^17.0.1"
 	}
